ktlint has been setup